methods.picture.MethodsPicture.scala.error
Erreur de compilation :
MethodsPicture:20: error: not found: value baisseBrosee
  baisseBrosee()
  ^