methods.picture.MethodsPicture.scala.code
override def run() {
  for (k<-1 to 3) {
    faireV(Color.YELLOW)
    gauche()
    avance(5:Int)
    droite()
   }
  gauche()
  for(k<-1 to 3) {
  	faireV(Color.GREEN)
  	droite()
  	avance(5:Int)
  	gauche()
  }
  
  
}

def Brosse() {
  baisseBrosee()
  leveBrosse()
}

def faireV(c:Color) {
  for (k<-1 to 3) {
  avance()
  setCouleurBrosse(c:Color)
  Brosse()
  avance()
  gauche()
  avance()
  Brosse()
  droite()
  avance()
  droite()
  avance()
  Brosse()
  gauche()
  avance()
  avance()
  }
}





